--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>careernest-momo-flow</title>
+    <title>careernest</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="careernest-momo-flow" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="careernest" />
+    <meta property="og:description" content="Career development app" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://th.bing.com/th/id/OIP.sFE1ntUNQmu9SFPIKNAiDwHaFl?w=165&h=180&c=7&r=0&o=7&pid=1.7&rm=3" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://th.bing.com/th/id/OIP.sFE1ntUNQmu9SFPIKNAiDwHaFl?w=165&h=180&c=7&r=0&o=7&pid=1.7&rm=3" />
   </head>
 
   <body>
